@@ -17,13 +17,7 @@ package org.apache.solr.cloud;
  * limitations under the License.
  */
 
-import org.apache.lucene.util.LuceneTestCase.Slow;
-import org.apache.solr.JSONTestUtil;
-import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
-import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.embedded.JettySolrRunner;
-import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.QueryRequest;
@@ -36,31 +30,16 @@ import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.Slice;
-import org.apache.solr.common.cloud.SolrZkClient;
-import org.apache.solr.common.cloud.ZkCoreNodeProps;
-import org.apache.solr.common.cloud.ZkStateReader;
-import org.apache.solr.common.params.CollectionParams;
-import org.apache.solr.common.params.ModifiableSolrParams;
-import org.apache.solr.common.util.NamedList;
-import org.apache.solr.core.CoreContainer;
-import org.apache.solr.servlet.SolrDispatchFilter;
 import org.junit.After;
 import org.junit.Before;
 
 import org.apache.commons.lang.StringUtils;
 import org.junit.Test;
+import static org.hamcrest.CoreMatchers.*;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.TimeUnit;
 
 /**
  * Tests using fromIndex that points to a collection in SolrCloud mode.
@@ -114,38 +93,11 @@ public class DistribJoinFromCollectionTest extends AbstractFullDistribZkTestBase
 
     Thread.sleep(1000); // so the commits fire
 
-    // verify the join with fromIndex works
-    String joinQ = "{!join from=join_s fromIndex="+fromColl+" to=join_s}match_s:c";
-    QueryRequest qr = new QueryRequest(params("collection", toColl, "q", joinQ, "fl", "id,get_s"));
-    QueryResponse rsp = new QueryResponse(cloudClient.request(qr), cloudClient);
-    SolrDocumentList hits = rsp.getResults();
-    assertTrue("Expected 1 doc", hits.getNumFound() == 1);
-    SolrDocument doc = hits.get(0);
-    assertEquals(toDocId, doc.getFirstValue("id"));
-    assertEquals("b", doc.getFirstValue("get_s"));
+    //without score
+    testJoins(toColl, fromColl, toDocId, false);
 
-    // create an alias for the fromIndex and then query through the alias
-    String alias = fromColl+"Alias";
-    CollectionAdminRequest.CreateAlias request = new CollectionAdminRequest.CreateAlias();
-    request.setAliasName(alias);
-    request.setAliasedCollections(fromColl);
-    request.process(cloudClient);
-
-    joinQ = "{!join from=join_s fromIndex="+alias+" to=join_s}match_s:c";
-    qr = new QueryRequest(params("collection", toColl, "q", joinQ, "fl", "id,get_s"));
-    rsp = new QueryResponse(cloudClient.request(qr), cloudClient);
-    hits = rsp.getResults();
-    assertTrue("Expected 1 doc", hits.getNumFound() == 1);
-    doc = hits.get(0);
-    assertEquals(toDocId, doc.getFirstValue("id"));
-    assertEquals("b", doc.getFirstValue("get_s"));
-
-    // verify join doesn't work if no match in the "from" index
-    joinQ = "{!join from=join_s fromIndex="+fromColl+" to=join_s}match_s:d";
-    qr = new QueryRequest(params("collection", toColl, "q", joinQ, "fl", "id,get_s"));
-    rsp = new QueryResponse(cloudClient.request(qr), cloudClient);
-    hits = rsp.getResults();
-    assertTrue("Expected no hits", hits.getNumFound() == 0);
+    //with score
+    testJoins(toColl, fromColl, toDocId, true);
 
     log.info("DistribJoinFromCollectionTest logic complete ... deleting the " + toColl + " and " + fromColl + " collections");
 
@@ -157,11 +109,85 @@ public class DistribJoinFromCollectionTest extends AbstractFullDistribZkTestBase
         req.process(cloudClient);
       } catch (Exception e) {
         // don't fail the test
-        log.warn("Could not delete collection {} after test completed due to: "+e, c);
+        log.warn("Could not delete collection {} after test completed due to: " + e, c);
       }
     }
 
     log.info("DistribJoinFromCollectionTest succeeded ... shutting down now!");
+  }
+
+  private void testJoins(String toColl, String fromColl, Integer toDocId, boolean isScoresTest)
+      throws SolrServerException, IOException {
+    // verify the join with fromIndex works
+    final String[] scoreModes = {"avg","max","min","total"};
+    String joinQ = "{!join " + anyScoreMode(isScoresTest, scoreModes)
+                   + "from=join_s fromIndex=" + fromColl + " to=join_s}match_s:c";
+    QueryRequest qr = new QueryRequest(params("collection", toColl, "q", joinQ, "fl", "id,get_s,score"));
+    QueryResponse rsp = new QueryResponse(cloudClient.request(qr), cloudClient);
+    SolrDocumentList hits = rsp.getResults();
+    assertTrue("Expected 1 doc", hits.getNumFound() == 1);
+    SolrDocument doc = hits.get(0);
+    assertEquals(toDocId, doc.getFirstValue("id"));
+    assertEquals("b", doc.getFirstValue("get_s"));
+    assertScore(isScoresTest, doc);
+
+    //negative test before creating an alias
+    checkAbsentFromIndex(fromColl, toColl, isScoresTest, scoreModes);
+
+    // create an alias for the fromIndex and then query through the alias
+    String alias = fromColl+"Alias";
+    CollectionAdminRequest.CreateAlias request = new CollectionAdminRequest.CreateAlias();
+    request.setAliasName(alias);
+    request.setAliasedCollections(fromColl);
+    request.process(cloudClient);
+
+    joinQ = "{!join " + anyScoreMode(isScoresTest, scoreModes)
+            + "from=join_s fromIndex=" + alias + " to=join_s}match_s:c";
+    qr = new QueryRequest(params("collection", toColl, "q", joinQ, "fl", "id,get_s,score"));
+    rsp = new QueryResponse(cloudClient.request(qr), cloudClient);
+    hits = rsp.getResults();
+    assertTrue("Expected 1 doc", hits.getNumFound() == 1);
+    doc = hits.get(0);
+    assertEquals(toDocId, doc.getFirstValue("id"));
+    assertEquals("b", doc.getFirstValue("get_s"));
+    assertScore(isScoresTest, doc);
+
+    //negative test after creating an alias
+    checkAbsentFromIndex(fromColl, toColl, isScoresTest, scoreModes);
+
+    // verify join doesn't work if no match in the "from" index
+    joinQ = "{!join " + (anyScoreMode(isScoresTest, scoreModes))
+            + "from=join_s fromIndex=" + fromColl + " to=join_s}match_s:d";
+    qr = new QueryRequest(params("collection", toColl, "q", joinQ, "fl", "id,get_s,score"));
+    rsp = new QueryResponse(cloudClient.request(qr), cloudClient);
+    hits = rsp.getResults();
+    assertTrue("Expected no hits", hits.getNumFound() == 0);
+    assertScore(isScoresTest, doc);
+  }
+
+  private void assertScore(boolean isScoresTest, SolrDocument doc) {
+    if (isScoresTest) {
+      assertThat(doc.getFirstValue("score").toString(), not("1.0"));
+    } else {
+      assertEquals("1.0", doc.getFirstValue("score").toString());
+    }
+  }
+
+  private String anyScoreMode(boolean isScoresTest, String[] scoreModes) {
+    return isScoresTest ? "score=" + (scoreModes[random().nextInt(scoreModes.length)]) + " " : "";
+  }
+
+  private void checkAbsentFromIndex(String fromColl, String toColl, boolean isScoresTest, String[] scoreModes) throws SolrServerException, IOException {
+    final String wrongName = fromColl + "WrongName";
+    final String joinQ = "{!join " + (anyScoreMode(isScoresTest, scoreModes))
+        + "from=join_s fromIndex=" + wrongName + " to=join_s}match_s:c";
+    final QueryRequest qr = new QueryRequest(params("collection", toColl, "q", joinQ, "fl", "id,get_s,score"));
+    try {
+      cloudClient.request(qr);
+    } catch (HttpSolrClient.RemoteSolrException ex) {
+      assertEquals(SolrException.ErrorCode.BAD_REQUEST.code, ex.code());
+      assertTrue(ex.getMessage().contains(wrongName));
+    }
   }
 
   protected Integer indexDoc(String collection, int id, String joinField, String matchField, String getField) throws Exception {
